--- a/app/views/motions/new.html.erb
+++ b/app/views/motions/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New motion</h1>
+<h1>Motie Indienen</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', motions_path %>
+<%= link_to 'Back', request.referer %>
