--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_area :text, placeholder: "Wat zei die lul?" %>
   </div>
   <%= f.label :user_id %>
-  <% users_array = User.all.map { |city| [city.name, city.id] } %>
+  <% users_array = User.all.map { |user| [user.name, user.id] } %>
   <%= f.select :user_id, options_for_select(users_array) %>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
