--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,7 +15,7 @@
     <section>
 			Api keys:<br /> 
 			<% @user.api_keys.each do |ak| %>
-				<%= ak.name %>: <%= link_to ak.key, ak %><br />
+				<%= ak.name %>: <%= link_to ak.key, ak %> <%= link_to "x", ak, method: :delete, data: { confirm: "Zeker weten?" } %><br />
 			<% end %>
 			<%= form_for(ApiKey.new) do |f| %>
 				<%= f.text_field :name %>
