--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -23,7 +23,11 @@ $(document).ready(function()
 
   <tbody>
     <% @beers.each do |beer| %>
-      <tr>
+			<% if beer.reviews.where("user_id = ?", current_user.id).empty? %>
+			<tr bgcolor="#FF3300">
+			<% else %>
+			<tr bgcolor="#00FF00">
+			<% end %>
         <td><%= link_to beer.name, beer %></td>
         <td><%= beer.soort %></td>
         <td><%= beer.reviews.average(:rating) %></td>
