--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -42,4 +42,6 @@ $(document).ready(function()
   </tbody>
 </table>
 <br>
-<%= link_to 'Nieuw bier', new_beer_path %>
+<div class="btn-group">
+  <%= link_to 'Nieuw bier', new_beer_path, :class => "btn btn-primary" %>
+</div>
