--- a/app/views/beers/reviews.html.erb
+++ b/app/views/beers/reviews.html.erb
@@ -14,7 +14,6 @@
   </div>
   <div class="actions">
     <%= f.submit %>
-    <%= link_to 'Terug', @beer %>
   </div>
-  
+  <%= link_to 'Terug', @beer, :class => "btn" %>
 <% end %>
