--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -32,8 +32,10 @@
   </div>
 </div>
 
-<%= link_to 'Review | ', reviews_beer_path(@beer) unless current_user.reviews.find_by(beer_id: @beer.id) %> 
-<% if current_user.admin? || current_user.dev? %>
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<% end %>
-<%= link_to 'Back', beers_path %>
+<div class="btn-group">
+  <%= link_to 'Review', reviews_beer_path(@beer), :class => "btn btn-primary" unless current_user.reviews.find_by(beer_id: @beer.id) %> 
+  <% if current_user.admin? || current_user.dev? %>
+    <%= link_to 'Edit', edit_beer_path(@beer), :class => "btn btn-info" %>
+  <% end %>
+<%= link_to 'Back', beers_path, :class => "btn" %>
+</div>
