--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Terug', events_path %>
+<div class="btn-group">
+  <%= link_to 'Terug', events_path, :class => "btn" %>
+</div>
