--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,6 +17,11 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
+  
+  <div class="field">
+    <%= f.label :location %>
+    <%= f.text_field :location %>
+  </div>
 
   <div class="field">
     <%= f.label :date %>
