--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,4 +44,9 @@
     </section>
   </div>
 </div>
-<%= link_to 'Terug', events_path, :class => "btn" %>
+<div class="btn-group">
+  <% if current_user.admin? || current_user.dev? %>
+    <%= link_to 'Edit', edit_event_path(@event), :class => "btn btn-info" %>
+  <% end %>
+  <%= link_to 'Terug', events_path, :class => "btn" %>
+</div>
