--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -22,18 +22,17 @@
 	<td><%= event.date.strftime("%d/%m/%Y") %>
         <td><% event.signups.where(status: true).each do |s| %>
             <%= s.user.name %>, 
-            <% end %> ..jij?
+            <% end %> 
+            <% if !event.signups.where(status:true).contains(<current_user.name>) %>
+              ..jij?
+            <% end %>
         </td>
-        <% if current_user == event.user and !current_user.admin? and !current_user.schrijf_feut? %>
+        <% if current_user == event.user or current_user.admin? or current_user.schrijf_feut? %>
         <td><%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %>
         <% end %></td>
         <% if current_user.admin? %>
-        <td><%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %></td>
         <td><%= link_to 'Verwijder', event, method: :delete, data: { confirm: 'Weet je het zeker?' }, :class => "btn btn-danger" %></td>
         <% end %>
-        <% if current_user.schrijf_feut? %>
-	<td><%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %></td>
-	<% end %>
       </tr>
     <% end %>
   </tbody>
