--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,22 +17,13 @@
 
   <tbody>
     <% @events.each do |event| %>
-    <% if event.date.future?
-          class = "info"
-       else if event.date.today?
-          class = "success"
-       else
-          class = "active"
-       end%>
-      <tr class = "<%= class %>">
+			<% c = "info" if event.future? %>
+			<% c = "active" if event.past? %>
+      <% c = "success" if event.today? %>
+			<tr class = "<%= c %>">
         <td><%= link_to event.title, event %></td>
 	<td><%= event.date.strftime("%d/%m/%Y") %>
-        <td><% event.signups.where(status: true).each do |s| %>
-            <%= s.user.name %>, 
-            <% end %> 
-            <% if !event.signups.where(status:true).contains(<current_user.name>) %>
-              ..jij?
-            <% end %>
+        <td><% event.signups.where(status: true).each_with_index do |s, index| %><%= "," if index != 0 %> <%= s.user.name %><% end %><% if event.signups.where(status: true, user_id: current_user.id).empty? %>, ..jij?<% end %>
         </td>
         <% if current_user == event.user or current_user.admin? or current_user.schrijf_feut? %>
         <td><%= link_to 'Wijzig', edit_event_path(event), :class => "btn btn-info" %>
