--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -34,7 +34,7 @@
 
 <div class="btn-group">
   <%= link_to 'Review', reviews_beer_path(@beer), :class => "btn btn-primary" unless current_user.reviews.find_by(beer_id: @beer.id) %> 
-  <% if current_user.admin? || current_user.dev? %>
+  <% if current_user.admin? %>
     <%= link_to 'Edit', edit_beer_path(@beer), :class => "btn btn-info" %>
   <% end %>
 <%= link_to 'Back', beers_path, :class => "btn" %>
