--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -34,7 +34,7 @@ $(document).ready(function()
         <td><%= link_to beer.name, beer %></td>
         <td><%= beer.soort %></td>
         <td><%= beer.reviews.average(:rating) %></td>
-				<td><%= beer.brewer %>
+				<td><%= beer.brewer %></td>
 	<td><%= beer.reviews.count %></td>
         <% if current_user.admin? %>
         <td><%= link_to 'Verwijder', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
