--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -14,10 +14,10 @@ $(document).ready(function()
       <th>Naam</th>
       <th>Soort</th>
       <th>Cijfer</th>
-			<th>Brouwer<th>
+			<th>Brouwer</th>
       <th>Aantal reviews</th>
       <% if current_user.admin? %>
-      <th></th>
+				<th></th>
       <% end %>
     </tr>
   </thead>
