--- a/app/views/pushes/_form.html.erb
+++ b/app/views/pushes/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :data %><br>
-		<%= f.text_area :data, value: "{ notification: { title: \"title\", body: \"body\", icon: \"ic_launcher\" }" %>
+		<%= f.text_area :data, value: "{ notification: { title: \"title\", body: \"body\", icon: \"ic_launcher\" } }" %>
   </div>
   <div class="actions">
     <%= f.submit %>
