--- a/app/views/pushes/_form.html.erb
+++ b/app/views/pushes/_form.html.erb
@@ -13,7 +13,8 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+		  <% users_array = User.all.map { |user| [user.name, user.id] } %>
+		  <%= f.select :user_id, options_for_select(users_array) %>
   </div>
   <div class="field">
     <%= f.label :data %><br>
