usergroups in api

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :country %>
     <%= f.text_field :country %>
   </div>
+  <div class="field">
+    <%= f.label :URL %>
+    <%= f.text_field :URL %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
