Update to new bootstrap / updated navbar+home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,35 +1,31 @@
 <% if signed_in? %>
-  <div class="row">
-    <aside class="span4">
-      <section>
-        <%= render 'shared/user_info' %>
-      </section>
-      <section>
-        <%= render 'shared/random_biertje' %>
-      </section>
-      <section>
-        <%= render 'shared/quote_form' %>
-      </section>
-			<% if current_user.lid? %>
-			<section>
-	      <%= render 'shared/activiteiten' %>
-      </section>
-		  <% end %>
-		</aside>
-    <div class="span8">
-	<%= render 'shared/feed' %>		
-      
+    <div class="row">
+      <aside class="span4">
+        <section>
+          <%= render 'shared/user_info' %>
+        </section>
+        <section>
+          <%= render 'shared/random_biertje' %>
+        </section>
+        <section>
+          <%= render 'shared/quote_form' %>
+        </section>
+        <% if current_user.lid? %>
+            <section>
+              <%= render 'shared/activiteiten' %>
+            </section>
+        <% end %>
+      </aside>
+      <div class="span8">
+        <%= render 'shared/feed' %>
+      </div>
     </div>
-  </div>
-  <div class="row">
-  <%= render 'shared/news_item' %>      
-  </div>
+    <div class="row">
+      <%= render 'shared/news_item' %>
+    </div>
 <% else %>
-<div class="center hero-unit">
-  <h1>Hamers zonder Sikkel</h1>
-
-  <h2>
-   defenestraties voorbehouden
-  </h2>
-</div>
+    <div class="center jumbotron">
+      <h1>Hamers zonder Sikkel</h1>
+      <h2>defenestraties voorbehouden</h2>
+    </div>
 <% end %>
