--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,10 +1,12 @@
 <%= form_for(@quote) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <div class="field">
-    <%= f.text_area :text, placeholder: "Wat zei die lul?" %>
-  </div>
-  <%= f.label :user_id %>
-  <% users_array = User.all.map { |user| [user.name, user.id] } %>
-  <%= f.select :user_id, options_for_select(users_array) %>
-  <%= f.submit "Post", class: "btn btn-large btn-primary" %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div class="field">
+      <%= f.text_area :text, placeholder: "Wat zei die lul?", class: "form-control" %>
+    </div>
+    <%= f.label :user_id %>
+    <% users_array = User.all.map { |user| [user.name, user.id] } %>
+    <div class="form-group">
+      <%= f.select :user_id, options_for_select(users_array), {}, class: "form-control" %>
+    </div>
+    <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
