--- a/app/views/shared/_activiteiten.html.erb
+++ b/app/views/shared/_activiteiten.html.erb
@@ -1,4 +1,5 @@
-<ul><% @events.each do |f| %>
-<li><%= f.date.strftime("%d/%m/%Y") %> - <%= link_to f.title, f %></li>
-<% end %>
+<ul>
+  <% @events.each do |f| %>
+      <li><%= f.date.strftime("%d/%m/%Y") %> - <%= link_to f.title, f %></li>
+  <% end %>
 </ul>
