--- a/app/views/motions/index.html.erb
+++ b/app/views/motions/index.html.erb
@@ -1,41 +1,37 @@
 <script type="text/javascript">
-$(document).ready(function()
-    {
-	$("#motion").tablesorter();
-    }
-);
+    $(document).ready(function()
+            {
+                $("#motion").tablesorter();
+            }
+    );
 </script>
-
 <h1>Moties</h1>
-
 <table id="motion" class="tablesorter table table-hover">
   <thead>
-    <tr>
-      <th>Type</th>
-			<th>Date</th>
-      <th>Subject</th>
-      <th>Content</th>
-      <th>User</th>
-      <th>Actions</th>
-    </tr>
+  <tr>
+    <th>Type</th>
+    <th>Date</th>
+    <th>Subject</th>
+    <th>Content</th>
+    <th>User</th>
+    <th>Actions</th>
+  </tr>
   </thead>
-  
-  <%= will_paginate %>	
-
+  <%= will_paginate %>
   <tbody>
-    <% @motions.each do |motion| %>
+  <% @motions.each do |motion| %>
       <tr>
         <td><%= motion.motion_type %></td>
-				<td><%= motion.created_at %></td>
+        <td><%= motion.created_at %></td>
         <td><%= motion.subject %></td>
         <td><%= motion.content %></td>
         <td><%= link_to motion.user.name, motion.user %></td>
-        <td><%= link_to 'Show', motion %> | 
-        <%= link_to 'Edit', edit_motion_path(motion) %> | 
-        <%= link_to 'Destroy', motion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', motion %> |
+          <%= link_to 'Edit', edit_motion_path(motion) %> |
+          <%= link_to 'Destroy', motion, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
-
 <%= will_paginate %>
