--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -1,37 +1,32 @@
 <script type="text/javascript">
-$(document).ready(function()
-    {
-	$("#pages").tablesorter();
-    }
-);
+    $(document).ready(function()
+            {
+                $("#pages").tablesorter();
+            }
+    );
 </script>
-
 <h1>Openbare Paginas</h1>
-
 <table id="pages" class="tablesorter table table-hover">
   <thead>
-    <tr>
-      <th>openbaar</th>
-      <th>title</th>
-      <th>Admin stuff</th>
-    </tr>
+  <tr>
+    <th>openbaar</th>
+    <th>title</th>
+    <th>Admin stuff</th>
+  </tr>
   </thead>
-
-
-<%= will_paginate %>	
-
- <tbody> 
+  <%= will_paginate %>
+  <tbody>
   <% @public_pages.each do |m| %>
-    <tr>
-			<td><%= m.public %></td>
-      <td><%= link_to m.title, "/" + m.title %></td>
-      <td><%= link_to "Wijzig", edit_public_page_path(m) %>
-        | <%= link_to "Verwijder", m, method: :delete,
-                                  data: { confirm: "Weet je het zeker?" } %></td>
+      <tr>
+        <td><%= m.public %></td>
+        <td><%= link_to m.title, "/" + m.title %></td>
+        <td><%= link_to "Wijzig", edit_public_page_path(m) %>
+          | <%= link_to "Verwijder", m, method: :delete,
+                        data: { confirm: "Weet je het zeker?" } %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
-
 <%= will_paginate %>
 <%= link_to "Add Pagina", new_public_page_path %>
