--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,43 +1,40 @@
 <script type="text/javascript">
-$(document).ready(function()
-    {
-	$("#user").tablesorter();
-    }
-);
+    $(document).ready(function()
+            {
+                $("#user").tablesorter();
+            }
+    );
 </script>
-
 <h1>Leden</h1>
-
 <table id="user" class="tablesorter table table-hover">
   <thead>
-    <tr>
-      <th>Naam</th>
-      <th>Aantal quotes</th>
-      <th>Aantal reviews</th>
-      <% if current_user.admin? %>
-      <th>Admin stuff</th>
-      <% end %>
-    </tr>
-  </thead>
-
-
-<%= will_paginate %>	
-
- <tbody> 
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= gravatar_for user, size: 52 %>
-      <%= link_to user.name, user %></td>
-      <td><%= user.quotes.count %></td>
-      <td><%= user.reviews.count %></td>
-      <% if current_user.admin? && !current_user?(user) %><td>
-        <%= link_to "Wijzig", edit_user_path(user) %>
-        | <%= link_to "Verwijder", user, method: :delete,
-                                  data: { confirm: "Weet je het zeker?" } %></td>
-      <% end %>
-      </tr>
+  <tr>
+    <th>Naam</th>
+    <th>Aantal quotes</th>
+    <th>Aantal reviews</th>
+    <% if current_user.admin? %>
+        <th>Admin stuff</th>
     <% end %>
+  </tr>
+  </thead>
+  <%= will_paginate %>
+  <tbody>
+  <% @users.each do |user| %>
+      <tr>
+        <td><%= gravatar_for user, size: 52 %>
+          <%= link_to user.name, user %>
+        </td>
+        <td><%= user.quotes.count %></td>
+        <td><%= user.reviews.count %></td>
+        <% if current_user.admin? && !current_user?(user) %>
+            <td>
+              <%= link_to "Wijzig", edit_user_path(user) %>
+              | <%= link_to "Verwijder", user, method: :delete,
+                            data: { confirm: "Weet je het zeker?" } %>
+            </td>
+        <% end %>
+      </tr>
+  <% end %>
   </tbody>
 </table>
-
 <%= will_paginate %>
