--- a/app/views/motions/edit.html.erb
+++ b/app/views/motions/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @motion %> |
-<%= link_to 'Back', motions_path %>
+<%= link_to 'Back', motions_path, class: "btn btn-default" %>
