--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Terug', news_index_path %>
+<%= link_to 'Terug', news_index_path, class: "btn btn-default" %>
