--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,29 +1,23 @@
 <p id="notice"><%= notice %></p>
-
 <p>
   <strong>Cat:</strong>
   <%= @news.cat %>
 </p>
-
 <p>
   <strong>Body:</strong>
   <%= @news.body %>
 </p>
-
 <p>
   <strong>Title:</strong>
   <%= @news.title %>
 </p>
-
 <p>
   <strong>Image:</strong>
   <%= @news.image %>
 </p>
-
 <p>
   <strong>Date:</strong>
   <%= @news.date %>
 </p>
-
 <%= link_to 'Edit', edit_news_path(@news) %> |
-<%= link_to 'Back', news_index_path %>
+<%= link_to 'Terug', news_index_path, class: "btn btn-default" %>
