--- a/app/views/pushes/show.html.erb
+++ b/app/views/pushes/show.html.erb
@@ -8,4 +8,4 @@
   <%= @push.data %>
 </p>
 <%= link_to 'Edit', edit_push_path(@push) %> |
-<%= link_to 'Back', pushes_path %>
+<%= link_to 'Terug', pushes_path, class: "btn btn-default" %>
