--- a/app/views/beers/reviews.html.erb
+++ b/app/views/beers/reviews.html.erb
@@ -1,11 +1,11 @@
 <%= form_for(@beer.reviews.build(user_id: current_user.id, beer_id: @beer.id)) do |f| %>
-    <div class="field">
-      <%= f.text_area :description, placeholder: "Wat vonden we ervan?" %>
+    <div class="form-group">
+      <%= f.text_area :description, placeholder: "Wat vonden we ervan?", class: "form-control" %>
     </div>
-    <div class="field">
+    <div class="form-group">
       <%= f.label :rating %>
-      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] %>
-      <div class="field">
+      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], class: "form-control" %>
+      <div class="form-group">
         <%= f.label :proefdatum, "Proefdatum" %>
         <%= f.date_select :proefdatum %>
       </div>
@@ -13,7 +13,7 @@
       <%= f.hidden_field :beer_id %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit :Verstuur, class: "btn btn-default" %>
     </div>
-    <%= link_to 'Terug', @beer, :class => "btn" %>
+    <%= link_to 'Terug', @beer, :class => "btn btn-default" %>
 <% end %>
