--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <aside class="span8">
+  <aside class="col-md-8">
     <section>
       <h1><%= @event.title %></h1>
     </section>
     <section><%= @event.date.strftime("%d/%m/%Y %H:%M") %> tot <%= @event.end_time.strftime("%d/%m/%Y %H:%M") %> <% if @event.location != nil and @event.location.length > 1 %> - <%= @event.location %><% end %></section>
     <section><%= simple_format(@event.beschrijving) %></section>
   </aside>
-  <div class="span4">
+  <div class="col-md-4">
     <% if @event.user_id != nil %>
         <section>
           Event door: <%= @event.user.name %>
@@ -23,7 +23,7 @@
               <div><%= f.hidden_field :event_id %></div>
               <div><%= f.hidden_field :user_id %></div>
               <div><%= f.hidden_field :status %></div>
-              <%= f.submit "Ik zal aanwezig zijn.", class: "btn" %>
+              <%= f.submit "Ik zal aanwezig zijn.", class: "btn btn-success" %>
           <% end %>
       <% end %>
     </section>
@@ -38,7 +38,7 @@
               <div><%= f.hidden_field :event_id %></div>
               <div><%= f.hidden_field :user_id %></div>
               <div><%= f.hidden_field :status %></div>
-              <%= f.submit "Ik zal niet aanwezig zijn.", class: "btn" %>
+              <%= f.submit "Ik zal niet aanwezig zijn.", class: "btn btn-danger" %>
           <% end %>
       <% end %>
       <% if @event.location %>
@@ -59,5 +59,5 @@
   <% if current_user.admin? || current_user.dev? %>
       <%= link_to 'Edit', edit_event_path(@event), :class => "btn btn-info" %>
   <% end %>
-  <%= link_to 'Terug', events_path, :class => "btn" %>
+  <%= link_to 'Terug', events_path, :class => "btn btn-default" %>
 </div>
