--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @news %> |
-<%= link_to 'Back', news_index_path %>
+<%= link_to 'Terug', news_index_path, class: "btn btn-default" %>
