--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -20,9 +20,12 @@
       <tr>
         <td><%= m.public %></td>
         <td><%= link_to m.title, "/" + m.title %></td>
-        <td><%= link_to "Wijzig", edit_public_page_path(m) %>
-          | <%= link_to "Verwijder", m, method: :delete,
+        <td>
+          <div class="btn-group">
+            <%= link_to "Wijzig", edit_public_page_path(m), class: "btn btn-info" %>
+            <%= link_to "Verwijder", m, class: "btn btn-danger", method: :delete,
                         data: { confirm: "Weet je het zeker?" } %>
+          </div>
         </td>
       </tr>
   <% end %>
