--- a/app/views/pushes/edit.html.erb
+++ b/app/views/pushes/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @push %> |
-<%= link_to 'Back', pushes_path %>
+<%= link_to 'Terug', pushes_path, class: "btn btn-default" %>
