--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,11 +1,11 @@
 <%= form_for(@review) do |f| %>
-    <div class="field">
-      <%= f.text_area :description, placeholder: "Wat vonden we ervan?" %>
+    <div class="form-group">
+      <%= f.text_area :description, class: "form-control", placeholder: "Wat vonden we ervan?" %>
     </div>
-    <div class="field">
+    <div class="form-group">
       <%= f.label :rating %>
       <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] %>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :proefdatum, "Proefdatum" %>
         <%= f.date_select :proefdatum %>
       </div>
@@ -13,7 +13,7 @@
       <%= f.hidden_field :beer_id %>
     </div>
     <div class="actions">
-      <%= f.submit %>
-      <%= link_to 'Terug', @review.beer %>
+      <%= f.submit :Verstuur, class: "btn btn-default" %>
+      <%= link_to 'Terug', @review.beer, class: "btn btn-default" %>
     </div>
 <% end %>
