--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -1,16 +1,15 @@
 <h1>Groepen</h1>
-
-  <% @usergroups.each do |group| %>
+<% @usergroups.each do |group| %>
     <li>
       <%= group.name %>
     </li>
-  <% end %>
-</ul>
-
-<% if current_user.admin? %>
-<%= form_for(@group) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <%= f.text_field :name %>
-  <%= f.submit "Create", class: "btn btn-large btn-primary" %>
 <% end %>
+<% if current_user.admin? %>
+    <%= form_for(@group) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <div class="form-group">
+          <%= f.text_field :name, placeholder: "Groep", class: "form-control" %>
+          <%= f.submit "Create", class: "btn btn-large btn-primary" %>
+        </div>
+    <% end %>
 <% end %>
