--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,9 +28,11 @@
         <td><%= user.reviews.count %></td>
         <% if current_user.admin? && !current_user?(user) %>
             <td>
-              <%= link_to "Wijzig", edit_user_path(user) %>
-              | <%= link_to "Verwijder", user, method: :delete,
+              <div class="btn-group">
+              <%= link_to "Wijzig", edit_user_path(user), class: "btn btn-info" %>
+              <%= link_to "Verwijder", user, class: "btn btn-danger", method: :delete,
                             data: { confirm: "Weet je het zeker?" } %>
+              </div>
             </td>
         <% end %>
       </tr>
